# ObjectsDetector-OpenCV1

./: CMakeLists.txt  README.md  Task- Ride  main.cpp
YOLO/: yolov3-tiny.cfg
